  Benchmarks classes (version 1.9.1). Renamed the MFEM_ENABLE_GOOGLE_BENCHMARKS
  CMake option to just MFEM_ENABLE_BENCHMARKS.

- Changed the name of `IterativeSolverMonitor` to `IterativeSolverController`
  which now allows for declaring convergence by a user defined criterion. For
  backward compatibility, the old name is still available.

API changes
-----------
- API change: 'TMOP_Metric_skew2D' has been marked as deprecated.

- API change: in class GridFunction, 'fec' was renamed to 'fec_owned'.

- API change: `RiemannSolver` was renamed to `NumericalFlux` (the old name has
  been been deprecated through typedef)

- API change: support for SUNDIALS v7:
  * the SUNDIALS types `realtype` and `booleantype` are no longer defined by v7
    and therefore MFEM now uses the new type names `sunrealtype` and
    `sunbooleantype`, respectively, which MFEM defines when using SUNDIALS < v6
    where these types were not defined.
  * The SUNDIALS macro `SUNLS_SUCCESS` and some other `*_SUCCESS` macros were
    removed and replaced by `SUN_SUCCESS` in v7, so to avoid tedious checks for
    SUNDIALS versions, MFEM now defines and uses the constant `SUN_SUCCESS` when
    using SUNDIALS < v7.
  * The constants `SUN_PREC_*`, introduced by SUNDIALS v6 are now introduced by
    MFEM when using SUNDIALS < v6 to avoid tedious version checks.


Version 4.7, released on May 7, 2024
====================================

- Added support for single precision (with corresponding hypre build). The MFEM
  floating point type was generalized from `double` to `real_t`. For details see
  https://github.com/orgs/mfem/discussions/4207.

Meshing improvements
--------------------
- Added the capability to partition (big) serial meshes in serial code, see the
  new classes MeshPartitioner and MeshPart. This capability is also exposed as a
  menu option in the mesh-explorer miniapp in miniapps/meshing.

- Added named attribute sets and basic supporting methods to the Mesh class as a